# cantools

./: .appveyor.yml  .bazelrc  .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  BUILD.bazel  LICENSE  MANIFEST.in  Makefile  README.rst  ReferenceDBC.dbc  WORKSPACE  bitstruct.py  cantools.Dockerfile  docker-compose.yml  endurance.dbc  index.bzl  local_test_only.py  pyproject.toml  requirements.txt  setup.py  tox.ini
cantools/: BUILD.bazel  __init__.py  __main__.py  compat.py  db.py  errors.py  j1939.py  logreader.py  tester.py  typechecking.py  version.py
cantools/autosar/: __init__.py  end_to_end.py  secoc.py  snakeauth.py
cantools/database/: __init__.py  conversion.py  dataelement.py  errors.py  namedsignalvalue.py  signalbase.py  utils.py
cantools/database/can/: __init__.py  attribute.py  attribute_definition.py  bus.py  c_source.py  conversion.py  cpp_source.py  database.py  device.py  environment_variable.py  internal_database.py  message.py  node.py  signal.py  signal_group.py
cantools/database/diagnostics/: __init__.py  data.py  database.py  did.py
cantools/db/: __init__.py  attribute.py  attribute_definition.py  bus.py  data.py  database.py  dbc.py  did.py  file.py  format.py  internal_database.py  message.py  node.py  signal.py  utils.py
cantools/db/diagnostics/: __init__.py  data.py  database.py  did.py  internal_database.py
cantools/db/formats/: cdd.py  dbc.py  kcd.py  sym.py  utils.py
cantools/subparsers/: __utils__.py  convert.py  convert_to_tex.py  decode.py  dump.py  generate_c_source.py  generate_cpp_source.py  list.py  monitor.py  plot.py  utils.py  utils_argparse.py
cantools/subparsers/dump/: __init__.py  formatting.py
examples/generate_c/: BUILD.bazel
tests/: BUILD.bazel  Makefile  dummy.c  main.c  main_bit_fields.c  test.mk  test_autosar.py  test_basic.c  test_bit_fields.c  test_bitstruct.py  test_cantools.py  test_command_line.py  test_conversion.py  test_convert.py  test_convert_unittest.py  test_database.py  test_database_utils.py  test_dataelement.py  test_device.py  test_diagnostics_database.py  test_dump.py  test_generate_cpp.cpp  test_initial_values.c  test_list.py  test_logreader.py  test_monitor.py  test_overlapping_signals.py  test_plot.py  test_plot_unittests.py  test_plot_without_mock.py  test_signalbase.py  test_tester.py
tests/files/: CamelCaseEmpty.dbc  abs.dbc  add_two_dbc_files_2.dbc  attributes.dbc  attributes.ini  bad_message_length.dbc  bad_message_length.sym  basic-4.2.arxml  cp1252.dbc  decimal.dbc  double.dbc  dump.kcd  dump_signal_choices.dbc  ecu-extract-4.2.arxml  emc32.dbc  empty-6.0.sym  empty-enum-6.0.sym  empty.kcd  enums.sym  example.cdd  foobar.dbc  j1939.dbc  jopp-5.0.sym  jopp-6.0.sym  long_names.dbc  message_layout.kcd  min-max-only-6.0.sym  motohawk.c  motohawk.dbc  motohawk.h  multiplex.dbc  multiplex_2.dbc  multiplex_choices.dbc  multiplex_choices.ini  multiplex_extended.dbc  no_sender.dbc  no_version.kcd  padding_bit_order.c  padding_bit_order.dbc  padding_bit_order.h  (+20 more)
tests/files/arxml/: compu_method_no_category.arxml  system-3.2.3.arxml  system-4.2.arxml  system-DAI-3.1.2.arxml  system-bad-root-tag-4.2.arxml  system-dangling-reference-4.2.arxml  system-float-limits-missing-compu-scale-4.2.arxml  system-float-values.arxml  system-illegal-namespace-4.2.arxml  system-illegal-root-4.2.arxml  system-illegal-version-4.2.2.1.0.arxml  system-missing-denominator-4.2.arxml  system-missing-factor-4.2.arxml  system-multi-arpackages-4.2.arxml
tests/files/c_source/: abs.c  abs.h  abs_utils.c  abs_utils.h  camel_case_empty.c  camel_case_empty.h  camel_case_empty_utils.c  camel_case_empty_utils.h  choices.c  choices.h  choices_use_enum_choices.c  choices_use_enum_choices.h  choices_utils.c  choices_utils.h  enums.c  enums.h  floating_point.c  floating_point.h  floating_point_bit_fields.c  floating_point_bit_fields.h  floating_point_bit_fields_utils.c  floating_point_bit_fields_utils.h  floating_point_use_float.c  floating_point_use_float.h  floating_point_utils.c  floating_point_utils.h  letter_terminated_can_id_6_0.c  letter_terminated_can_id_6_0.h  letter_terminated_can_id_6_0_utils.c  letter_terminated_can_id_6_0_utils.h  min_max_only_6_0.c  min_max_only_6_0.h  min_max_only_6_0_utils.c  min_max_only_6_0_utils.h  motohawk.c  motohawk.h  motohawk_bit_fields.c  motohawk_bit_fields.h  motohawk_bit_fields_utils.c  motohawk_bit_fields_utils.h  (+63 more)
tests/files/cdd/: example-diddatarefs.cdd  invalid-bo-example.cdd  le-example.cdd
tests/files/code_templates/: fuzzer.c  fuzzer.mk  utils.c  utils.h
tests/files/dbc/: BU_BO_REL_.dbc  BU_BO_REL_Message.dbc  CSS-Electronics-SAE-J1939-DEMO.dbc  add_two_dbc_files_1.dbc  attribute_Event.dbc  attributes.dbc  attributes_relation.dbc  big_numbers.dbc  bus_comment.dbc  bus_comment_bare.dbc  bus_comment_bare_out.dbc  choices.dbc  choices.tex  choices_issue_with_name.dbc  comments_hex_and_motorola_converted_from_sym.dbc  empty_choice.dbc  empty_ns.dbc  fd_test.dbc  fd_test_int 2.dbc  floating_point.dbc  floating_point_use_float.dbc  foobar.dbc  is_in_phys_range.dbc  issue_163_newline.dbc  issue_184_ext_MUX_cascaded.dbc  issue_184_ext_MUX_cascaded_dumped.dbc  issue_184_ext_MUX_independent_multiplexors_dumped.dbc  issue_184_ext_MUX_multiple_values.dbc  issue_184_ext_MUX_multiple_values_dumped.dbc  issue_184_extended_mux_cascaded.dbc  issue_184_extended_mux_cascaded_dumped.dbc  issue_184_extended_mux_independent_multiplexors.dbc  issue_184_extended_mux_independent_multiplexors_dumped.dbc  issue_184_extended_mux_multiple_values_dumped.dbc  issue_199.dbc  issue_199_extended.dbc  issue_207_sig_plus.dbc  issue_228.dbc  issue_62.dbc  issue_63.dbc  (+36 more)
tests/files/kcd/: bad_message_length.kcd  dump.kcd  message_layout.kcd  signal_range.kcd  the_homer.kcd  vehicle-sort-signals-by-name.kcd  vehicle.kcd
tests/files/sym/: big-endian.sym  issue_138.sym  (+12 more)
tests/test_c_code/: .gitignore  CMakeLists.txt  test_basic.c  test_basic.h  test_bit_fields.c  test_bit_fields.h  test_enum_encode_decode.c  test_enum_encode_decode.h  test_initial_values.c  test_initial_values.h  test_runner.c
(+114 files in other folders)
