[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
show_error_codes = true
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = "^(?!cantools).*$"

[[tool.mypy.overrides]]
module = [
    "argparse_addons",
    "diskcache",
    "textparser",
    "bitstruct",
    "bitstruct.c",
    "matplotlib",
]
ignore_missing_imports = true

[tool.ruff]
select = [
    "E",  # pycodestyle Error
    "W",  # pycodestyle Warning
    "F",  # pyflakes
#    "B",  # pyflakes-bugbear
    "UP",  # pyupgrade
#    "C4",  # flake8-comprehensions
    "I",  # isort
]
ignore = [
    "E501",  # line too long
    "F541",  # f-string-missing-placeholders
]

# Assume Python 3.8.
target-version = "py38"

[tool.ruff.isort]
known-first-party = ["cantools"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]